Contrast Fixes

--- a/resources/assets/sass/components/applicant/job/index/_index.scss
+++ b/resources/assets/sass/components/applicant/job/index/_index.scss
@@ -41,7 +41,7 @@
             transition: all .2s ease;
 
             .browse__index-job-card-title {
-                background-color: transparentize($palette--black, .15);
+                background-color: #202023;
                 background-image: url("/images/bg_lightning_texture.png");
                 background-position: center;
                 background-repeat: repeat;
